--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,13 @@
  <nav>
       <ul>
           <li>
-            <a href="/user_sign_in">Sign In</a>
+            <a href="/users_sign_in">Sign In</a>
           </li>
           <li>
-            <a href="/user_sign_up">Sign Up</a>
+            <a href="/users_sign_out">Sign Out</a>
+          </li>
+          <li>
+            <a href="/users_sign_up">Sign Up</a>
           </li>
         <li>
           <a href="/users">Users</a>
