sign in, sign up, sign out works!

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,21 @@
           <a href="/photos">Photos</a>
         </li>
         <li>
-          
+     <%= session.fetch(:user_id)%>
         </li>
       </ul>
     </nav>
+<% if notice.present? %>
+<div>
+<%= notice %>
+</div>
+<%end%>
+
+<% if alert.present? %>
+<div style="color: red">
+<%= alert%>
+</div>
+<%end%>
 
     <%= yield %>
   </body>
