--- a/app/views/signup_form.html.erb
+++ b/app/views/signup_form.html.erb
@@ -1,7 +1,7 @@
 
  <h1>Sign Up</h1>
 
-<form action="/insert_user_record">
+<form action="/insert_user_record" method="post">
   <label for="browser_username">Username</label>
   <input id="browser_username" type="text" name="input_username" placeholder="Enter a username...">
 
